src/y.output
Grammaire

    0 $accept: program $end

    1 program: listdeclnonnull maindecl
    2        | maindecl

    3 listdecl: listdeclnonnull
    4         | %empty

    5 listdeclnonnull: vardecl
    6                | listdeclnonnull vardecl

    7 vardecl: type listtypedecl TOK_SEMICOL

    8 type: TOK_INT
    9     | TOK_BOOL
   10     | TOK_VOID

   11 listtypedecl: decl
   12             | listtypedecl TOK_COMMA decl

   13 decl: ident
   14     | ident TOK_AFFECT expr

   15 maindecl: type ident TOK_LPAR TOK_RPAR block

   16 listinst: listinstnonnull
   17         | %empty

   18 listinstnonnull: inst
   19                | listinstnonnull inst

   20 inst: expr TOK_SEMICOL
   21     | TOK_IF TOK_LPAR expr TOK_RPAR inst TOK_ELSE inst
   22     | TOK_IF TOK_LPAR expr TOK_RPAR inst
   23     | TOK_WHILE TOK_LPAR expr TOK_RPAR inst
   24     | TOK_FOR TOK_LPAR expr TOK_SEMICOL expr TOK_SEMICOL expr TOK_RPAR inst
   25     | TOK_DO inst TOK_WHILE TOK_LPAR expr TOK_RPAR TOK_SEMICOL
   26     | block
   27     | TOK_SEMICOL
   28     | TOK_PRINT TOK_LPAR listparamprint TOK_RPAR TOK_SEMICOL

   29 block: TOK_LACC listdecl listinst TOK_RACC

   30 expr: expr TOK_MUL expr
   31     | expr TOK_DIV expr
   32     | expr TOK_PLUS expr
   33     | expr TOK_MINUS expr
   34     | expr TOK_MOD expr
   35     | expr TOK_LT expr
   36     | expr TOK_GT expr
   37     | TOK_MINUS expr
   38     | expr TOK_GE expr
   39     | expr TOK_LE expr
   40     | expr TOK_EQ expr
   41     | expr TOK_NE expr
   42     | expr TOK_AND expr
   43     | expr TOK_OR expr
   44     | expr TOK_BAND expr
   45     | expr TOK_BOR expr
   46     | expr TOK_BXOR expr
   47     | expr TOK_SRL expr
   48     | expr TOK_SRA expr
   49     | expr TOK_SLL expr
   50     | TOK_NOT expr
   51     | TOK_BNOT expr
   52     | TOK_LPAR expr TOK_RPAR
   53     | ident TOK_AFFECT expr
   54     | TOK_INTVAL
   55     | TOK_TRUE
   56     | TOK_FALSE
   57     | ident

   58 listparamprint: listparamprint TOK_COMMA paramprint
   59               | paramprint

   60 paramprint: ident
   61           | TOK_STRING

   62 ident: TOK_IDENT


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
TOK_VOID (258) 10
TOK_INT (259) 8
TOK_INTVAL (260) 54
TOK_BOOL (261) 9
TOK_TRUE (262) 55
TOK_FALSE (263) 56
TOK_IDENT (264) 62
TOK_IF (265) 21 22
TOK_ELSE (266) 21
TOK_WHILE (267) 23 25
TOK_FOR (268) 24
TOK_PRINT (269) 28
TOK_AFFECT (270) 14 53
TOK_GE (271) 38
TOK_LE (272) 39
TOK_GT (273) 36
TOK_LT (274) 35
TOK_EQ (275) 40
TOK_NE (276) 41
TOK_PLUS (277) 32
TOK_MINUS (278) 33 37
TOK_MUL (279) 30
TOK_DIV (280) 31
TOK_MOD (281) 34
TOK_UMINUS (282)
TOK_SEMICOL (283) 7 20 24 25 27 28
TOK_COMMA (284) 12 58
TOK_LPAR (285) 15 21 22 23 24 25 28 52
TOK_RPAR (286) 15 21 22 23 24 25 28 52
TOK_LACC (287) 29
TOK_RACC (288) 29
TOK_STRING (289) 61
TOK_DO (290) 25
TOK_THEN (291)
TOK_OR (292) 43
TOK_AND (293) 42
TOK_BOR (294) 45
TOK_BXOR (295) 46
TOK_BAND (296) 44
TOK_SRL (297) 47
TOK_SRA (298) 48
TOK_SLL (299) 49
TOK_NOT (300) 50
TOK_BNOT (301) 51


Non-terminaux, suivis des règles où ils apparaissent

$accept (47)
    à gauche: 0
program (48)
    à gauche: 1 2, à droite: 0
listdecl (49)
    à gauche: 3 4, à droite: 29
listdeclnonnull (50)
    à gauche: 5 6, à droite: 1 3 6
vardecl (51)
    à gauche: 7, à droite: 5 6
type (52)
    à gauche: 8 9 10, à droite: 7 15
listtypedecl (53)
    à gauche: 11 12, à droite: 7 12
decl (54)
    à gauche: 13 14, à droite: 11 12
maindecl (55)
    à gauche: 15, à droite: 1 2
listinst (56)
    à gauche: 16 17, à droite: 29
listinstnonnull (57)
    à gauche: 18 19, à droite: 16 19
inst (58)
    à gauche: 20 21 22 23 24 25 26 27 28, à droite: 18 19 21 22 23
    24 25
block (59)
    à gauche: 29, à droite: 15 26
expr (60)
    à gauche: 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47
    48 49 50 51 52 53 54 55 56 57, à droite: 14 20 21 22 23 24 25
    30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
    51 52 53
listparamprint (61)
    à gauche: 58 59, à droite: 28 58
paramprint (62)
    à gauche: 60 61, à droite: 58 59
ident (63)
    à gauche: 62, à droite: 13 14 15 53 57 60


État 0

    0 $accept: . program $end

    TOK_VOID  décalage et aller à l'état 1
    TOK_INT   décalage et aller à l'état 2
    TOK_BOOL  décalage et aller à l'état 3

    program          aller à l'état 4
    listdeclnonnull  aller à l'état 5
    vardecl          aller à l'état 6
    type             aller à l'état 7
    maindecl         aller à l'état 8


État 1

   10 type: TOK_VOID .

    $défaut  réduction par utilisation de la règle 10 (type)


État 2

    8 type: TOK_INT .

    $défaut  réduction par utilisation de la règle 8 (type)


État 3

    9 type: TOK_BOOL .

    $défaut  réduction par utilisation de la règle 9 (type)


État 4

    0 $accept: program . $end

    $end  décalage et aller à l'état 9


État 5

    1 program: listdeclnonnull . maindecl
    6 listdeclnonnull: listdeclnonnull . vardecl

    TOK_VOID  décalage et aller à l'état 1
    TOK_INT   décalage et aller à l'état 2
    TOK_BOOL  décalage et aller à l'état 3

    vardecl   aller à l'état 10
    type      aller à l'état 7
    maindecl  aller à l'état 11


État 6

    5 listdeclnonnull: vardecl .

    $défaut  réduction par utilisation de la règle 5 (listdeclnonnull)


État 7

    7 vardecl: type . listtypedecl TOK_SEMICOL
   15 maindecl: type . ident TOK_LPAR TOK_RPAR block

    TOK_IDENT  décalage et aller à l'état 12

    listtypedecl  aller à l'état 13
    decl          aller à l'état 14
    ident         aller à l'état 15


État 8

    2 program: maindecl .

    $défaut  réduction par utilisation de la règle 2 (program)


État 9

    0 $accept: program $end .

    $défaut  accepter


État 10

    6 listdeclnonnull: listdeclnonnull vardecl .

    $défaut  réduction par utilisation de la règle 6 (listdeclnonnull)


État 11

    1 program: listdeclnonnull maindecl .

    $défaut  réduction par utilisation de la règle 1 (program)


État 12

   62 ident: TOK_IDENT .

    $défaut  réduction par utilisation de la règle 62 (ident)


État 13

    7 vardecl: type listtypedecl . TOK_SEMICOL
   12 listtypedecl: listtypedecl . TOK_COMMA decl

    TOK_SEMICOL  décalage et aller à l'état 16
    TOK_COMMA    décalage et aller à l'état 17


État 14

   11 listtypedecl: decl .

    $défaut  réduction par utilisation de la règle 11 (listtypedecl)


État 15

   13 decl: ident .
   14     | ident . TOK_AFFECT expr
   15 maindecl: type ident . TOK_LPAR TOK_RPAR block

    TOK_AFFECT  décalage et aller à l'état 18
    TOK_LPAR    décalage et aller à l'état 19

    $défaut  réduction par utilisation de la règle 13 (decl)


État 16

    7 vardecl: type listtypedecl TOK_SEMICOL .

    $défaut  réduction par utilisation de la règle 7 (vardecl)


État 17

   12 listtypedecl: listtypedecl TOK_COMMA . decl

    TOK_IDENT  décalage et aller à l'état 12

    decl   aller à l'état 20
    ident  aller à l'état 21


État 18

   14 decl: ident TOK_AFFECT . expr

    TOK_INTVAL  décalage et aller à l'état 22
    TOK_TRUE    décalage et aller à l'état 23
    TOK_FALSE   décalage et aller à l'état 24
    TOK_IDENT   décalage et aller à l'état 12
    TOK_MINUS   décalage et aller à l'état 25
    TOK_LPAR    décalage et aller à l'état 26
    TOK_NOT     décalage et aller à l'état 27
    TOK_BNOT    décalage et aller à l'état 28

    expr   aller à l'état 29
    ident  aller à l'état 30


État 19

   15 maindecl: type ident TOK_LPAR . TOK_RPAR block

    TOK_RPAR  décalage et aller à l'état 31


État 20

   12 listtypedecl: listtypedecl TOK_COMMA decl .

    $défaut  réduction par utilisation de la règle 12 (listtypedecl)


État 21

   13 decl: ident .
   14     | ident . TOK_AFFECT expr

    TOK_AFFECT  décalage et aller à l'état 18

    $défaut  réduction par utilisation de la règle 13 (decl)


État 22

   54 expr: TOK_INTVAL .

    $défaut  réduction par utilisation de la règle 54 (expr)


État 23

   55 expr: TOK_TRUE .

    $défaut  réduction par utilisation de la règle 55 (expr)


État 24

   56 expr: TOK_FALSE .

    $défaut  réduction par utilisation de la règle 56 (expr)


État 25

   37 expr: TOK_MINUS . expr

    TOK_INTVAL  décalage et aller à l'état 22
    TOK_TRUE    décalage et aller à l'état 23
    TOK_FALSE   décalage et aller à l'état 24
    TOK_IDENT   décalage et aller à l'état 12
    TOK_MINUS   décalage et aller à l'état 25
    TOK_LPAR    décalage et aller à l'état 26
    TOK_NOT     décalage et aller à l'état 27
    TOK_BNOT    décalage et aller à l'état 28

    expr   aller à l'état 32
    ident  aller à l'état 30


État 26

   52 expr: TOK_LPAR . expr TOK_RPAR

    TOK_INTVAL  décalage et aller à l'état 22
    TOK_TRUE    décalage et aller à l'état 23
    TOK_FALSE   décalage et aller à l'état 24
    TOK_IDENT   décalage et aller à l'état 12
    TOK_MINUS   décalage et aller à l'état 25
    TOK_LPAR    décalage et aller à l'état 26
    TOK_NOT     décalage et aller à l'état 27
    TOK_BNOT    décalage et aller à l'état 28

    expr   aller à l'état 33
    ident  aller à l'état 30


État 27

   50 expr: TOK_NOT . expr

    TOK_INTVAL  décalage et aller à l'état 22
    TOK_TRUE    décalage et aller à l'état 23
    TOK_FALSE   décalage et aller à l'état 24
    TOK_IDENT   décalage et aller à l'état 12
    TOK_MINUS   décalage et aller à l'état 25
    TOK_LPAR    décalage et aller à l'état 26
    TOK_NOT     décalage et aller à l'état 27
    TOK_BNOT    décalage et aller à l'état 28

    expr   aller à l'état 34
    ident  aller à l'état 30


État 28

   51 expr: TOK_BNOT . expr

    TOK_INTVAL  décalage et aller à l'état 22
    TOK_TRUE    décalage et aller à l'état 23
    TOK_FALSE   décalage et aller à l'état 24
    TOK_IDENT   décalage et aller à l'état 12
    TOK_MINUS   décalage et aller à l'état 25
    TOK_LPAR    décalage et aller à l'état 26
    TOK_NOT     décalage et aller à l'état 27
    TOK_BNOT    décalage et aller à l'état 28

    expr   aller à l'état 35
    ident  aller à l'état 30


État 29

   14 decl: ident TOK_AFFECT expr .
   30 expr: expr . TOK_MUL expr
   31     | expr . TOK_DIV expr
   32     | expr . TOK_PLUS expr
   33     | expr . TOK_MINUS expr
   34     | expr . TOK_MOD expr
   35     | expr . TOK_LT expr
   36     | expr . TOK_GT expr
   38     | expr . TOK_GE expr
   39     | expr . TOK_LE expr
   40     | expr . TOK_EQ expr
   41     | expr . TOK_NE expr
   42     | expr . TOK_AND expr
   43     | expr . TOK_OR expr
   44     | expr . TOK_BAND expr
   45     | expr . TOK_BOR expr
   46     | expr . TOK_BXOR expr
   47     | expr . TOK_SRL expr
   48     | expr . TOK_SRA expr
   49     | expr . TOK_SLL expr

    TOK_GE     décalage et aller à l'état 36
    TOK_LE     décalage et aller à l'état 37
    TOK_GT     décalage et aller à l'état 38
    TOK_LT     décalage et aller à l'état 39
    TOK_EQ     décalage et aller à l'état 40
    TOK_NE     décalage et aller à l'état 41
    TOK_PLUS   décalage et aller à l'état 42
    TOK_MINUS  décalage et aller à l'état 43
    TOK_MUL    décalage et aller à l'état 44
    TOK_DIV    décalage et aller à l'état 45
    TOK_MOD    décalage et aller à l'état 46
    TOK_OR     décalage et aller à l'état 47
    TOK_AND    décalage et aller à l'état 48
    TOK_BOR    décalage et aller à l'état 49
    TOK_BXOR   décalage et aller à l'état 50
    TOK_BAND   décalage et aller à l'état 51
    TOK_SRL    décalage et aller à l'état 52
    TOK_SRA    décalage et aller à l'état 53
    TOK_SLL    décalage et aller à l'état 54

    $défaut  réduction par utilisation de la règle 14 (decl)


État 30

   53 expr: ident . TOK_AFFECT expr
   57     | ident .

    TOK_AFFECT  décalage et aller à l'état 55

    $défaut  réduction par utilisation de la règle 57 (expr)


État 31

   15 maindecl: type ident TOK_LPAR TOK_RPAR . block

    TOK_LACC  décalage et aller à l'état 56

    block  aller à l'état 57


État 32

   30 expr: expr . TOK_MUL expr
   31     | expr . TOK_DIV expr
   32     | expr . TOK_PLUS expr
   33     | expr . TOK_MINUS expr
   34     | expr . TOK_MOD expr
   35     | expr . TOK_LT expr
   36     | expr . TOK_GT expr
   37     | TOK_MINUS expr .
   38     | expr . TOK_GE expr
   39     | expr . TOK_LE expr
   40     | expr . TOK_EQ expr
   41     | expr . TOK_NE expr
   42     | expr . TOK_AND expr
   43     | expr . TOK_OR expr
   44     | expr . TOK_BAND expr
   45     | expr . TOK_BOR expr
   46     | expr . TOK_BXOR expr
   47     | expr . TOK_SRL expr
   48     | expr . TOK_SRA expr
   49     | expr . TOK_SLL expr

    $défaut  réduction par utilisation de la règle 37 (expr)


État 33

   30 expr: expr . TOK_MUL expr
   31     | expr . TOK_DIV expr
   32     | expr . TOK_PLUS expr
   33     | expr . TOK_MINUS expr
   34     | expr . TOK_MOD expr
   35     | expr . TOK_LT expr
   36     | expr . TOK_GT expr
   38     | expr . TOK_GE expr
   39     | expr . TOK_LE expr
   40     | expr . TOK_EQ expr
   41     | expr . TOK_NE expr
   42     | expr . TOK_AND expr
   43     | expr . TOK_OR expr
   44     | expr . TOK_BAND expr
   45     | expr . TOK_BOR expr
   46     | expr . TOK_BXOR expr
   47     | expr . TOK_SRL expr
   48     | expr . TOK_SRA expr
   49     | expr . TOK_SLL expr
   52     | TOK_LPAR expr . TOK_RPAR

    TOK_GE     décalage et aller à l'état 36
    TOK_LE     décalage et aller à l'état 37
    TOK_GT     décalage et aller à l'état 38
    TOK_LT     décalage et aller à l'état 39
    TOK_EQ     décalage et aller à l'état 40
    TOK_NE     décalage et aller à l'état 41
    TOK_PLUS   décalage et aller à l'état 42
    TOK_MINUS  décalage et aller à l'état 43
    TOK_MUL    décalage et aller à l'état 44
    TOK_DIV    décalage et aller à l'état 45
    TOK_MOD    décalage et aller à l'état 46
    TOK_RPAR   décalage et aller à l'état 58
    TOK_OR     décalage et aller à l'état 47
    TOK_AND    décalage et aller à l'état 48
    TOK_BOR    décalage et aller à l'état 49
    TOK_BXOR   décalage et aller à l'état 50
    TOK_BAND   décalage et aller à l'état 51
    TOK_SRL    décalage et aller à l'état 52
    TOK_SRA    décalage et aller à l'état 53
    TOK_SLL    décalage et aller à l'état 54


État 34

   30 expr: expr . TOK_MUL expr
   31     | expr . TOK_DIV expr
   32     | expr . TOK_PLUS expr
   33     | expr . TOK_MINUS expr
   34     | expr . TOK_MOD expr
   35     | expr . TOK_LT expr
   36     | expr . TOK_GT expr
   38     | expr . TOK_GE expr
   39     | expr . TOK_LE expr
   40     | expr . TOK_EQ expr
   41     | expr . TOK_NE expr
   42     | expr . TOK_AND expr
   43     | expr . TOK_OR expr
   44     | expr . TOK_BAND expr
   45     | expr . TOK_BOR expr
   46     | expr . TOK_BXOR expr
   47     | expr . TOK_SRL expr
   48     | expr . TOK_SRA expr
   49     | expr . TOK_SLL expr
   50     | TOK_NOT expr .

    $défaut  réduction par utilisation de la règle 50 (expr)


État 35

   30 expr: expr . TOK_MUL expr
   31     | expr . TOK_DIV expr
   32     | expr . TOK_PLUS expr
   33     | expr . TOK_MINUS expr
   34     | expr . TOK_MOD expr
   35     | expr . TOK_LT expr
   36     | expr . TOK_GT expr
   38     | expr . TOK_GE expr
   39     | expr . TOK_LE expr
   40     | expr . TOK_EQ expr
   41     | expr . TOK_NE expr
   42     | expr . TOK_AND expr
   43     | expr . TOK_OR expr
   44     | expr . TOK_BAND expr
   45     | expr . TOK_BOR expr
   46     | expr . TOK_BXOR expr
   47     | expr . TOK_SRL expr
   48     | expr . TOK_SRA expr
   49     | expr . TOK_SLL expr
   51     | TOK_BNOT expr .

    $défaut  réduction par utilisation de la règle 51 (expr)


État 36

   38 expr: expr TOK_GE . expr

    TOK_INTVAL  décalage et aller à l'état 22
    TOK_TRUE    décalage et aller à l'état 23
    TOK_FALSE   décalage et aller à l'état 24
    TOK_IDENT   décalage et aller à l'état 12
    TOK_MINUS   décalage et aller à l'état 25
    TOK_LPAR    décalage et aller à l'état 26
    TOK_NOT     décalage et aller à l'état 27
    TOK_BNOT    décalage et aller à l'état 28

    expr   aller à l'état 59
    ident  aller à l'état 30


État 37

   39 expr: expr TOK_LE . expr

    TOK_INTVAL  décalage et aller à l'état 22
    TOK_TRUE    décalage et aller à l'état 23
    TOK_FALSE   décalage et aller à l'état 24
    TOK_IDENT   décalage et aller à l'état 12
    TOK_MINUS   décalage et aller à l'état 25
    TOK_LPAR    décalage et aller à l'état 26
    TOK_NOT     décalage et aller à l'état 27
    TOK_BNOT    décalage et aller à l'état 28

    expr   aller à l'état 60
    ident  aller à l'état 30


État 38

   36 expr: expr TOK_GT . expr

    TOK_INTVAL  décalage et aller à l'état 22
    TOK_TRUE    décalage et aller à l'état 23
    TOK_FALSE   décalage et aller à l'état 24
    TOK_IDENT   décalage et aller à l'état 12
    TOK_MINUS   décalage et aller à l'état 25
    TOK_LPAR    décalage et aller à l'état 26
    TOK_NOT     décalage et aller à l'état 27
    TOK_BNOT    décalage et aller à l'état 28

    expr   aller à l'état 61
    ident  aller à l'état 30


État 39

   35 expr: expr TOK_LT . expr

    TOK_INTVAL  décalage et aller à l'état 22
    TOK_TRUE    décalage et aller à l'état 23
    TOK_FALSE   décalage et aller à l'état 24
    TOK_IDENT   décalage et aller à l'état 12
    TOK_MINUS   décalage et aller à l'état 25
    TOK_LPAR    décalage et aller à l'état 26
    TOK_NOT     décalage et aller à l'état 27
    TOK_BNOT    décalage et aller à l'état 28

    expr   aller à l'état 62
    ident  aller à l'état 30


État 40

   40 expr: expr TOK_EQ . expr

    TOK_INTVAL  décalage et aller à l'état 22
    TOK_TRUE    décalage et aller à l'état 23
    TOK_FALSE   décalage et aller à l'état 24
    TOK_IDENT   décalage et aller à l'état 12
    TOK_MINUS   décalage et aller à l'état 25
    TOK_LPAR    décalage et aller à l'état 26
    TOK_NOT     décalage et aller à l'état 27
    TOK_BNOT    décalage et aller à l'état 28

    expr   aller à l'état 63
    ident  aller à l'état 30


État 41

   41 expr: expr TOK_NE . expr

    TOK_INTVAL  décalage et aller à l'état 22
    TOK_TRUE    décalage et aller à l'état 23
    TOK_FALSE   décalage et aller à l'état 24
    TOK_IDENT   décalage et aller à l'état 12
    TOK_MINUS   décalage et aller à l'état 25
    TOK_LPAR    décalage et aller à l'état 26
    TOK_NOT     décalage et aller à l'état 27
    TOK_BNOT    décalage et aller à l'état 28

    expr   aller à l'état 64
    ident  aller à l'état 30


État 42

   32 expr: expr TOK_PLUS . expr

    TOK_INTVAL  décalage et aller à l'état 22
    TOK_TRUE    décalage et aller à l'état 23
    TOK_FALSE   décalage et aller à l'état 24
    TOK_IDENT   décalage et aller à l'état 12
    TOK_MINUS   décalage et aller à l'état 25
    TOK_LPAR    décalage et aller à l'état 26
    TOK_NOT     décalage et aller à l'état 27
    TOK_BNOT    décalage et aller à l'état 28

    expr   aller à l'état 65
    ident  aller à l'état 30


État 43

   33 expr: expr TOK_MINUS . expr
